==> bradwarrum/RTVT/RTVT/src/Adafruit_TFTLCD.cpp <==
	#include <include/pio.h>
    #define PROGMEM
    #define pgm_read_byte(addr) (*(const unsigned char *)(addr))
    #define pgm_read_word(addr) (*(const unsigned short *)(addr))
	#include <avr/pgmspace.h>
#include "Adafruit_TFTLCD.h"
#define TFTWIDTH   320
#define TFTHEIGHT  480
#define ID_932X    0
#define ID_7575    1
#define ID_9341    2
#define ID_HX8357D    3
#define ID_UNKNOWN 0xFF

void Adafruit_TFTLCD::begin(uint16_t id) {
	uint8_t i = 0;

	reset();

	_delay_ms(200);
	// HX8357D
	driver = ID_HX8357D;
	CS_ACTIVE;
	 while(i < sizeof(HX8357D_regValues)) {
	  uint8_t r = pgm_read_byte(&HX8357D_regValues[i++]);
	  uint8_t len = pgm_read_byte(&HX8357D_regValues[i++]);
	  if(r == TFTLCD_DELAY) {
		  //TODO: wut _delay_ms(len);
		_delay_ms(len);
	  } else {
	//Serial.print("Register $"); Serial.print(r, HEX);
	//Serial.print(" datalen "); Serial.println(len);

	CS_ACTIVE;
	CD_COMMAND;
	write8(r);
	CD_DATA;
	for (uint8_t d=0; d<len; d++) {
	  uint8_t x = pgm_read_byte(&HX8357D_regValues[i++]);
	  write8(x);
	}
	CS_IDLE;

	  }
	}
	 return;
}

uint32_t Adafruit_TFTLCD::readReg(uint8_t r) {
  uint32_t id;
  uint8_t x;

  // try reading register #4
  CS_ACTIVE;
  CD_COMMAND;
  write8(r);
  setReadDir();  // Set up LCD data port(s) for READ operations
  CD_DATA;
  _delay_us(50);
  read8(x);
  id = x;          // Do not merge or otherwise simplify
  id <<= 8;              // these lines.  It's an unfortunate
  read8(x);
  id  |= x;        // shenanigans that are going on.
  id <<= 8;              // these lines.  It's an unfortunate
  read8(x);
  id  |= x;        // shenanigans that are going on.
  id <<= 8;              // these lines.  It's an unfortunate
  read8(x);
  id  |= x;        // shenanigans that are going on.
  CS_IDLE;
  setWriteDir();  // Restore LCD data port(s) to WRITE configuration

  //Serial.print("Read $"); Serial.print(r, HEX); 
  //Serial.print(":\t0x"); Serial.println(id, HEX);
  return id;
}

void Adafruit_TFTLCD::writeRegister24(uint8_t r, uint32_t d) {
  CS_ACTIVE;
  CD_COMMAND;
  write8(r);
  CD_DATA;
  _delay_us(10);
  write8(d >> 16);
  _delay_us(10);
  write8(d >> 8);
  _delay_us(10);
  write8(d);
  CS_IDLE;

}

void Adafruit_TFTLCD::writeRegister32(uint8_t r, uint32_t d) {
  CS_ACTIVE;
  CD_COMMAND;
  write8(r);
  CD_DATA;
  _delay_us(10);
  write8(d >> 24);
  _delay_us(10);
  write8(d >> 16);
  _delay_us(10);
  write8(d >> 8);
  _delay_us(10);
  write8(d);
  CS_IDLE;
}
